--- a/public/css/calc.css
+++ b/public/css/calc.css
@@ -4,7 +4,7 @@ html, body{
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: black;
+    background-color: #000000;
 }
 .display{
     height: 20%;
